tests/macros/order_select/mask.stderr
error: option `mask` does not exist for kind `order_select`
 --> tests/macros/order_select/mask.rs:2:49
  |
2 |     let q = requestty::questions![OrderSelect { mask: todo!() }];
  |                                                 ^^^^
