tests/macros/order_select/mask.rs
fn main() {
    let q = requestty::questions![OrderSelect { mask: todo!() }];
}
